; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldlang.c_print_data_statement.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/ld/extr_ldlang.c_print_data_statement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, %struct.TYPE_9__*, i32, %struct.TYPE_6__*, i64 }
%struct.TYPE_9__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i64 }
%struct.TYPE_6__ = type { i64 }

@SECTION_NAME_MAP_LENGTH = common dso_local global i32 0, align 4
@BYTE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"BYTE\00", align 1
@SHORT_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"SHORT\00", align 1
@LONG_SIZE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"LONG\00", align 1
@QUAD_SIZE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"QUAD\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"SQUAD\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"0x%V %W %s 0x%v\00", align 1
@etree_value = common dso_local global i64 0, align 8
@print_dot = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*)* @print_data_statement to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_data_statement(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %7 = call i32 (...) @init_opb()
  store i32 0, i32* %3, align 4
  br label %8

8:                                                ; preds = %14, %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @SECTION_NAME_MAP_LENGTH, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %8
  %13 = call i32 (...) @print_space()
  br label %14

14:                                               ; preds = %12
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %8

17:                                               ; preds = %8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 4
  %20 = load i64, i64* %19, align 8
  store i64 %20, i64* %4, align 8
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 3
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %22, align 8
  %24 = icmp ne %struct.TYPE_6__* %23, null
  br i1 %24, label %25, label %33

25:                                               ; preds = %17
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 3
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %4, align 8
  %32 = add nsw i64 %31, %30
  store i64 %32, i64* %4, align 8
  br label %33

33:                                               ; preds = %25, %17
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  switch i32 %36, label %37 [
    i32 132, label %39
    i32 129, label %41
    i32 131, label %43
    i32 130, label %45
    i32 128, label %47
  ]

37:                                               ; preds = %33
  %38 = call i32 (...) @abort() #3
  unreachable

39:                                               ; preds = %33
  %40 = load i32, i32* @BYTE_SIZE, align 4
  store i32 %40, i32* %5, align 4
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %49

41:                                               ; preds = %33
  %42 = load i32, i32* @SHORT_SIZE, align 4
  store i32 %42, i32* %5, align 4
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %6, align 8
  br label %49

43:                                               ; preds = %33
  %44 = load i32, i32* @LONG_SIZE, align 4
  store i32 %44, i32* %5, align 4
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %6, align 8
  br label %49

45:                                               ; preds = %33
  %46 = load i32, i32* @QUAD_SIZE, align 4
  store i32 %46, i32* %5, align 4
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i8** %6, align 8
  br label %49

47:                                               ; preds = %33
  %48 = load i32, i32* @QUAD_SIZE, align 4
  store i32 %48, i32* %5, align 4
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i8** %6, align 8
  br label %49

49:                                               ; preds = %47, %45, %43, %41, %39
  %50 = load i64, i64* %4, align 8
  %51 = load i32, i32* %5, align 4
  %52 = load i8*, i8** %6, align 8
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %54 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %53, i32 0, i32 2
  %55 = load i32, i32* %54, align 8
  %56 = call i32 @minfo(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %50, i32 %51, i8* %52, i32 %55)
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %58 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %57, i32 0, i32 1
  %59 = load %struct.TYPE_9__*, %struct.TYPE_9__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %59, i32 0, i32 0
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 0
  %62 = load i64, i64* %61, align 8
  %63 = load i64, i64* @etree_value, align 8
  %64 = icmp ne i64 %62, %63
  br i1 %64, label %65, label %71

65:                                               ; preds = %49
  %66 = call i32 (...) @print_space()
  %67 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %68 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %67, i32 0, i32 1
  %69 = load %struct.TYPE_9__*, %struct.TYPE_9__** %68, align 8
  %70 = call i32 @exp_print_tree(%struct.TYPE_9__* %69)
  br label %71

71:                                               ; preds = %65, %49
  %72 = call i32 (...) @print_nl()
  %73 = load i64, i64* %4, align 8
  %74 = load i32, i32* %5, align 4
  %75 = call i64 @TO_ADDR(i32 %74)
  %76 = add nsw i64 %73, %75
  store i64 %76, i64* @print_dot, align 8
  ret void
}

declare dso_local i32 @init_opb(...) #1

declare dso_local i32 @print_space(...) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @minfo(i8*, i64, i32, i8*, i32) #1

declare dso_local i32 @exp_print_tree(%struct.TYPE_9__*) #1

declare dso_local i32 @print_nl(...) #1

declare dso_local i64 @TO_ADDR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
